# CivicMorph

./: README.md  pyproject.toml
config/profiles/: bike_supergrid_city.yaml  green_weave_first.yaml  optimistic_courtyard_city.yaml  transit_corridor_city.yaml
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  tutorial_boulder.rst
docs/source/api/: abm.rst  config.rst  data_sources.rst  index.rst  integrations.rst  io_and_utils.rst  osm.rst  pipeline.rst
docs/source/developer/: numpy_docstring_template.rst
docs/source/notebooks/: civicmorph-boulder-colorado-tutorial.ipynb
docs/source/user_guide/: framework_interoperability.rst  framework_introduction.rst  framework_workflow.rst  index.rst  intermediate_application_scaffolding.rst  intermediate_applications.rst  profile_parameters.rst
output/jupyter-notebook/: civicmorph-boulder-colorado-tutorial.ipynb
src/civicmorph/: __init__.py  accessibility.py  baseline.py  blocks.py  cli.py  config.py  data_sources.py  deps.py  exceptions.py  export.py  green_network.py  grid.py  io.py  osm.py  pipeline.py  render.py  sampling.py  scoring.py  synthesis.py  terrain.py  transit.py  types.py
src/civicmorph/abm/: __init__.py  mesa_runner.py
src/civicmorph/integrations/: __init__.py  graph2city_adapter.py
tests/: conftest.py  test_abm.py  test_data_sources.py  test_graph2city_adapter.py  test_pipeline_integration.py
